...
        initialTitle = "",
        onOptionSelected = { route ->
            navController.navigate(route)
        },
        showBackIcon = true,
        backDestination =  "get_albumes/Coleccionista/0",
        profile = "Coleccionista"
    ) {
            Scaffold(
                modifier = Modifier.fillMaxSize(),
                topBar = {
                    TopAppBar(
                        title = { Text(text = "Vinilos") },
...
                        value = name,
                        onValueChange = {
                            name = it
                            hasNameFieldError = !validateField(field = name)
                            isFormValid = isFormValid()
                        },
                        label = { Text("Nombre") },
                        placeholder = { Text("Ej: Pablo Perez") },
                        isError = hasNameFieldError,
                        modifier = Modifier
                            .fillMaxWidth()
                            .testTag("NombreField"),
                        colors = textFieldColors,
                        trailingIcon = {
                            if(hasNameFieldError){
                                Icon(
                                    imageVector = Icons.Filled.Error,
                                    tint = ErrorRed,
                                    contentDescription = "Select date"
                                )
                            }
                        }

                    )
                    if (hasNameFieldError) {
...
                        value = cover,
                        onValueChange = {
                            cover = it
                            hasCoverFieldError = !validateField(field = cover)
                            isFormValid = isFormValid()
                        },
                        label = { Text("Portada") },
                        placeholder = { Text("Ej: https://i.pinimg.com/image.jpg") },
                        isError =  hasCoverFieldError,
                        modifier = Modifier
                            .fillMaxSize()
                            .testTag("PortadaField"),
                        colors = textFieldColors,
                        trailingIcon = {
                            if(hasCoverFieldError){
                                Icon(
                                    imageVector = Icons.Filled.Error,
                                    tint = ErrorRed,
...
                        value = description,
                        onValueChange = {
                            description = it
                            hasDescriptionFieldError = !validateField(description)
                            isFormValid = isFormValid()
                        },
                        label = { Text("Descripción") },
                        isError =  hasDescriptionFieldError,
                        modifier = Modifier
                            .fillMaxSize()
                            .testTag("DescripciónField"),
                        maxLines = 5, // Define el límite de líneas (o elimina para ilimitado)
                        keyboardOptions = KeyboardOptions.Default.copy(
                            imeAction = ImeAction.Default
                        ),
                        colors = textFieldColors
                    )
                    CustomDropDown(
                        text = "Género",
                        options = genreOptions,
                        onSelected = {
                                value ->
                            if (value != null) {
                                genre = value
                            }
...
                        selectedValue = genre,

                    )


                    CustomDropDown(
                        text = "Sello discográfico",
                        options = recordOptions,
                        onSelected = {
                                value ->
                            if (value != null) {
                                recordLabel = value
                            }
...
                                recordLabel = recordLabel,
                            )
                            viewModel.addAlbum(context,newAlbum, navController)
                        },
                        enabled = isFormValid(),
                        modifier = Modifier
                            .testTag("AddAlbum")
                            .fillMaxWidth()
                            .height(50.dp),
                        colors = ButtonDefaults.buttonColors(
                            containerColor = Color.Black,
                            contentColor = Color.White
                        ),

                    ) {
                        Text(text = "Agregar", fontSize = 18.sp)
                    }

                }
            }

    }
...
                        contentDescription = "Select date"
                    )
                }
            },
            modifier = Modifier
                .fillMaxSize()
                .testTag("FechaField"),
            colors = textFieldColors
        )

        if (showDatePicker) {


...
                            val date = Date()
                            selectedDate = SimpleDateFormat("dd/MM/yyyy", Locale.getDefault()).format(date) // Para mostrar
                            onDateSelected(SimpleDateFormat("yyyy-MM-dd", Locale.getDefault()).format(date)) // Para enviar
                        }
                        showDatePicker = false
                    }) {
                        Text("OK")
                    }
                },
                dismissButton = {
                    TextButton(onClick = onDismiss) {
                        Text("Cancel")
                    }
...
