...
                    style = MaterialTheme.typography.bodyLarge,
                    fontSize = 16.sp
                )
                Spacer(modifier = Modifier.height(24.dp))

                Text(
                    text = "Selecciona tu tipo de usuario para comenzar:",
                    fontWeight = FontWeight.Bold,
                    fontSize = 18.sp
                )
                Spacer(modifier = Modifier.height(16.dp))

                Button(
...
                        .clip(RoundedCornerShape(12.dp)),
                    colors = ButtonDefaults.buttonColors(
                        containerColor = Color.Black,
                        contentColor = Color.White
                    )
                ) {
                    Text(text = "Usuario", fontSize = 18.sp)
                }
                Spacer(modifier = Modifier.height(16.dp))

                OutlinedButton(
                    onClick = {

...
