...
                Text(
                    text = album.name,
                    fontSize = 24.sp,
                    fontWeight = FontWeight.Bold,
                    style = MaterialTheme.typography.titleLarge,
                    color = MaterialTheme.colorScheme.onBackground,
                    modifier = Modifier.testTag("AlbumTitle")
                )
                Spacer(modifier = Modifier.height(20.dp))

                Text(
                    text = date,
                    fontSize = 16.sp,
...
                        color = MaterialTheme.colorScheme.onBackground
                    )
                }

                Spacer(modifier = Modifier.height(20.dp))

                if (profile == "Coleccionista") {
                    Text(
                        text = "+ Agregar track",
                        fontSize = 20.sp,
                        style = MaterialTheme.typography.titleMedium,
                        fontWeight = FontWeight.Bold,
                        modifier = Modifier
                            .fillMaxWidth()
                            .clickable { showDialog = true }
                            .padding(horizontal = 10.dp)
                            .testTag("AddTrackButton"),
                        color = MaterialTheme.colorScheme.primary
                    )
                    Spacer(modifier = Modifier.height(16.dp))
                }

                Text(
...
        onDismissRequest = {
            errorMessage = ""
            onDismiss()
        },
        title = {
            Text(
                text = "Agregar Track",
                color = MaterialTheme.colorScheme.onSurface,
                style = MaterialTheme.typography.titleMedium
            )
        },
        text = {
            Column {
...
